# odd-collector-profiler

./: .dockerignore  .gitignore  Dockerfile  README.md  collector_config.yaml  pyproject.toml  start.sh
.github/workflows/: build.yaml  build_dev.yaml  check_build.yaml  release-build.yaml
config_examples/: azure_sql.yaml  clickhouse.yaml  mssql.yaml  mysql.yaml  postgres.yaml
odd_collector_profiler/: __main__.py  data_frame_reader.py  errors.py  logger.py  profiler_sdk.py
odd_collector_profiler/datasource/database/: profiler.py  repository.py  table.py
odd_collector_profiler/domain/: collector_profiler_config.py  config.py  profiler.py
odd_collector_profiler/domain/statistics/: __init__.py  column_statistic.py  datetime_column_statistics.py  int_column_statistics.py  number_column_statistics.py  string_column_statistics.py
odd_collector_profiler/helpers/: sql_dialect.py  task_runner.py
odd_collector_profiler/profilers/: __init__.py
odd_collector_profiler/profilers/azure_sql/: profiler.py
odd_collector_profiler/profilers/clickhouse/: profiler.py
odd_collector_profiler/profilers/mssql/: profiler.py
odd_collector_profiler/profilers/mysql/: profiler.py
odd_collector_profiler/profilers/oracle/: profiler.py
odd_collector_profiler/profilers/postgres/: profiler.py
odd_collector_profiler/services/: data_frame_reader.py  data_profiler.py
odd_collector_profiler/utils/: datetime.py  tasks.py
