[tool.poetry]
name = "odd-collector-profiler"
version = "0.1.0"
description = ""
authors = ["Pavel Mackarichev <vixtir90@gmail.com>"]
readme = "README.md"
packages = [{include = "odd_collector_profiler"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SQLAlchemy = "^1.4.41"
scipy = "^1.9.1"
psycopg2 = "^2.9.3"
odd-collector-sdk = "^0.3.21"
tzlocal = "^4.2"
funcy = "^1.17"
pyodbc = "^4.0.35"
dataprofiler = [
    {version = "^0.8.8", extras = ["ml"], markers = "sys_platform == 'linux'"},
    {version = "^0.8.8", markers="sys_platform == 'darwin'"}
]
tensorflow-macos = { version = "2.11.0", markers = "sys_platform == 'darwin'" }
scikit-learn = { version = "^1.2.1", markers = "sys_platform == 'darwin'" }
oddrn-generator = "^0.1.70"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "22.3.0"
pytest = "6.2.5"
pre-commit = "^3.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
