[tool.poetry]
name = "odd-collector-profiler"
version = "0.1.0"
description = ""
authors = ["Pavel Mackarichev <vixtir90@gmail.com>"]
readme = "README.md"
packages = [{include = "odd_collector_profiler"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SQLAlchemy = "^1.4.41"
scipy = "^1.9.1"
psycopg2 = "^2.9.3"
odd-collector-sdk = "^0.3.21"
tzlocal = "^4.2"
funcy = "^1.17"
oddrn-generator = "^0.1.70"
dataprofiler = "0.8.8"
tensorflow= { version = "2.12.0", markers = "sys_platform == 'linux' and platform_machine == 'amd64'" }
tensorflow_cpu_aws= { version = "2.12.0", markers = "sys_platform == 'linux' and platform_machine=='aarch64'" }
tensorflow-macos = { version = "2.12.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
pymysql = "^1.0.2"
pyodbc = "^4.0.35"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "22.3.0"
pytest = "6.2.5"
pre-commit = "^3.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
