[tool.poetry]
name = "odd-collector-profiler"
version = "0.1.0"
description = ""
authors = ["Pavel Mackarichev <vixtir90@gmail.com>"]
readme = "README.md"
packages = [{include = "odd_collector_profiler"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
SQLAlchemy = "^2.0.29"
scipy = "^1.13.0"
psycopg2 = "^2.9.9"
odd-collector-sdk = "^0.3.25"
tzlocal = "^4.3.1"
funcy = "^1.18"
oddrn-generator = "^0.1.100"
dataprofiler = {version = "0.10.9", extras = ["ml"]}
tensorflow = { version = "2.12.0", markers = "sys_platform == 'linux' and platform_machine == 'amd64'" }
tensorflow_cpu_aws = { version = "2.12.0", markers = "sys_platform == 'linux' and platform_machine=='aarch64'" }
tensorflow-macos = { version = "2.12.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
pymysql = "^1.1.0"
pyodbc = "^4.0.39"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "22.3.0"
pytest = "6.2.5"
pre-commit = "^3.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
